@@ -1268,7 +1268,13 @@ function ShowScenes()
               xhtm+=
                 '\t    <tr>\n' +
                 '\t      <td id="name">' + item.Name + '</td>\n' +
-                '\t      <td id="bigtext"></td>\n';
+                '\t      <td id="bigtext">';
+			  if (item.UsedByCamera==true) {
+				var streamimg='<img src="images/webcam.png" title="' + $.i18n('Stream Video') +'" height="16">';
+				streamurl="<a href=\"javascript:ShowCameraLiveStream('" + item.Name + "','" + item.CameraFeed + "')\">" + streamimg + "</a>";
+				xhtm+=streamurl;
+			  }
+			  xhtm+='</td>\n';
 
 			if (item.Type=="Scene") {
 				xhtm+='<td id="img1"><img src="images/push48.png" title="Activate" onclick="SwitchScene(' + item.idx + ',\'On\',RefreshScenes);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="48"></td>\n';
